--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ a.nav-link:hover {
 .btn {
   background-color: #79a3b1;
   color: #fcf8ec;
-  margin: 10px;
+  margin: 50px 0 10px;
   padding: 10px 20px;
 }
 
