--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,10 @@ a:hover {
 
 .feature-card-img {
     width: 100%;
+    /* margin-right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center; */
     border-radius: 20px;
 }
 
