--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ a:hover {
     padding: 10% 15%;
 }
 
+
 /* navbar */
 .navbar {
     background-color: #fcf8ec;
@@ -51,7 +52,11 @@ a:hover {
 
 .logo {
     width: 40px;
-    margin-left: 20px;
+    margin-left: 50px;
+}
+
+.navbar-toggler-icon {
+    margin-right: 50px;
 }
 
 .fa-bars {
@@ -60,18 +65,30 @@ a:hover {
 }
 
 .nav-item {
-    padding: 0 20px;
+    margin: 0;
+    padding: 0 40px;
     text-align: center;
 }
 
 .nav-link {
-    font-size: 1rem;
-    font-weight: 500;
+    font-size: 1em;
+    font-weight: 300;
     color: #456268;
 }
 
 .nav-link:hover {
     color: #79a3b1;
+}
+
+.active {
+    width: 100%;
+    background-color: #d0e8f2;
+    box-shadow: 0 0 10px -6px rgb(146, 146, 146);
+    border-radius: 10px;
+}
+
+.active:hover {
+    opacity: 0.8;
 }
 
 /* Hero Section */
@@ -106,7 +123,7 @@ a:hover {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
-    box-shadow: 0 0 10px -5px rgb(146, 146, 146);
+    box-shadow: 0 0 10px -6px rgb(146, 146, 146);
 }
 
 .cta-btn:hover {
@@ -123,6 +140,7 @@ a:hover {
     border-radius: 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    cursor: pointer;
 }
 
 .feature-text {
@@ -132,6 +150,7 @@ a:hover {
 .spaced-lettering {
     text-transform: uppercase;
     font-size: 1em;
+    padding-bottom: 5px;
 }
 
 .feature-text h2 {
@@ -151,10 +170,6 @@ a:hover {
 
 .feature-card-img {
     width: 100%;
-    /* margin-right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center; */
     border-radius: 20px;
 }
 
@@ -277,7 +292,7 @@ footer p {
     box-shadow: 0 0 10px -6px rgb(146, 146, 146);
     padding: 10%;
     border-radius: 20px;
-    margin-top: 10%;
+    margin-top: 20%;
 }
 
 .about-text {
@@ -344,4 +359,34 @@ footer p {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+/* PROJECT PAGE */
+.select-img-project {
+    width: 80%;
+}
+
+.project-heading {
+    margin: 20% 0 10%;
+    text-align: center;
+}
+
+.project-card {
+    margin-bottom: 10%;
+    overflow: hidden;
+}
+
+.project-img-card {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 100px;
+    padding: 10%;
+}
+
+.project-img {
+    width: 80%;
+    border-radius: 20px;
 }
